[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "unicc-moe-safety-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai==1.30.1",
    "python-dotenv==1.0.1",
    "pytest==7.4.0",
]
